GNOME Bugzilla – Bug 737549
GOA dialogs are not opened after cancellation
Last modified: 2014-10-13 15:11:06 UTC
GOA dialogs are not opened after cancellation with gnome-initial-setup 3.14.0 and gnome-online-accounts 3.14.0. Steps to reproduce: 1. Run gnome-initial-setup. 2. On the Online Accounts page click on a provider (e.g. Google). 3. The log in dialog opened. Click on the Cancel button. 4. Try to open the dialog of the same provider again. 5. The dialog won't be opened, instead it throws the following error on command line: (gnome-initial-setup:2626): GoaBackend-CRITICAL **: get_tokens_and_identity: assertion 'priv->error == NULL' failed Distribution is Arch Linux.
Created attachment 288249 [details] [review] Fix a life-cycle issue in the oauth2 provider When calling g_propagate_error on an error, the src becomes invalid, but you have to clear your pointer yourself, if you want to keep using it.
Review of attachment 288249 [details] [review]: Looks good to me, thanks! It went unnoticed because the Settings panel destroys the provider object on cancellation, and uses a new one on the second attempt.
Attachment 288249 [details] pushed as a251f21 - Fix a life-cycle issue in the oauth2 provider