Fix a life-cycle issue in the oauth2 provider

When calling g_propagate_error on an error, the src becomes invalid,
but you have to clear your pointer yourself, if you want to keep
using it.

https://bugzilla.gnome.org/show_bug.cgi?id=737549